# School_Card_Manage_System

./: CMakeLists.txt  readme.md
Inc/: admin.h  data_struct.h  login.h  record.h  str_safe_read.h  student.h
Src/: admin.c  login.c  main.c  record.c  str_safe_read.c  student.c
data/: user.txt
log/: B25030601.txt
